--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,7 +25,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: chmod +x escaner
+        run: echo Hello Friend
 
       - name: Another script
         run: echo Hello from another script
