--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,15 +1,19 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: S3 sync action
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "ghTest" ]
+    branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+
+permissions: 
+  id-token: write
+  contents: read
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -24,8 +28,13 @@ jobs:
       - uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-session-name: awssyncsession
+          role-to-assume: ${{ secrets.AWS_IAM_ROLE }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Another script
-        run: echo Hello from another script
+
+      - name: sync bucket
+        run: aws s3 sync ./file/ s3://${{ secrets.AWS_BUCKET_NAME  }} --delete
